@@ -803,6 +803,44 @@ skip_font_size:
       pango_attr_iterator_destroy (pango_attr_iter);
       pango_attr_list_unref (pango_attr_list);
     }
+    attr = gst_ttml_style_get_attr (&span->style, GST_TTML_ATTR_BACKGROUND_COLOR);
+    if (attr && ((attr->value.color & 0xFF) != 0)) {
+      /* Background color has alpha, and pango markup does not support it.
+       * Provide Pango attrs directly, passing the alpha in the LSB of the red
+       * component (hack alert!). We will pickup these attrs later and render
+       * them manually. */
+      PangoAttribute *pattr = pango_attr_background_new (
+          (attr->value.color >> 16) & 0xFF00 |
+          (attr->value.color >>  0) & 0x00FF,
+          (attr->value.color >>  8) & 0xFF00,
+          (attr->value.color >>  0) & 0xFF00);
+      pattr->start_index = region->current_par_content_plain_length;
+      pattr->end_index = region->current_par_content_plain_length + frag_len;
+      if (!region->current_par_pango_attrs) {
+        region->current_par_pango_attrs = pango_attr_list_new ();
+      }
+      /* This overwrites the attrs of the same type generated by pango markup */
+      pango_attr_list_change (region->current_par_pango_attrs, pattr);
+    }
+    attr = gst_ttml_style_get_attr (&span->style, GST_TTML_ATTR_COLOR);
+    if (attr && ((attr->value.color & 0xFF) != 0)) {
+      /* Foreground color has alpha, and pango markup does not support it.
+       * Provide Pango attrs directly, passing the alpha in the LSB of the red
+       * component (hack alert!). We will pickup these attrs later and render
+       * them manually. */
+      PangoAttribute *pattr = pango_attr_foreground_new (
+          (attr->value.color >> 16) & 0xFF00 |
+          (attr->value.color >>  0) & 0x00FF,
+          (attr->value.color >>  8) & 0xFF00,
+          (attr->value.color >>  0) & 0xFF00);
+      pattr->start_index = region->current_par_content_plain_length;
+      pattr->end_index = region->current_par_content_plain_length + frag_len;
+      if (!region->current_par_pango_attrs) {
+        region->current_par_pango_attrs = pango_attr_list_new ();
+      }
+      /* This overwrites the attrs of the same type generated by pango markup */
+      pango_attr_list_change (region->current_par_pango_attrs, pattr);
+    }
 
     region->current_par_content_plain_length += frag_len;
     chars_left -= frag_len;
@@ -882,9 +920,10 @@ gst_ttmlrender_show_layout (cairo_t *cairo, PangoLayout *layout,
         switch (attr->klass->type) {
         case PANGO_ATTR_FOREGROUND: {
             PangoAttrColor *color = (PangoAttrColor *)attr;
-            cairo_set_source_rgb (cairo, color->color.red / 65535.0,
+            cairo_set_source_rgba (cairo, (color->color.red & 0xFF00) / 65280.0,
                                   color->color.green / 65535.0,
-                                  color->color.blue / 65535.0);
+                                  color->color.blue / 65535.0,
+                                  (color->color.red & 0x00FF) / 255.0);
           }
           break;
         case PANGO_ATTR_BACKGROUND: {
@@ -894,9 +933,10 @@ gst_ttmlrender_show_layout (cairo_t *cairo, PangoLayout *layout,
             if (!render)
               cairo_stroke (cairo);
             cairo_save (cairo);
-            cairo_set_source_rgb (cairo, color->color.red / 65535.0,
+            cairo_set_source_rgba (cairo, (color->color.red & 0xFF00) / 65280.0,
                                   color->color.green / 65535.0,
-                                  color->color.blue / 65535.0);
+                                  color->color.blue / 65535.0,
+                                  (color->color.red & 0x00FF) / 255.0);
             cairo_rectangle (cairo, 0, -pre_space, width, pre_space + post_space);
             cairo_fill (cairo);
             cairo_restore (cairo);
